--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "es5"
+    "arrowParens": "always",
+    "bracketSpacing": false,
+    "trailingComma": "all",
+    "singleQuote": true,
+    "tabWidth": 4
 }
